# FORKCHART---Assistant-Backend

./: .gitignore  README.md  config.py  pyproject.toml  requirment.txt  run.py
app/: main.py
app/account/: accountModel.py  accountSchema.py  accountView.py
app/chat/: chatModel.py  chatSchema.py  chatView.py  chat_service.py
db/: mongodb.py  postgresql.py
